email setup and tested

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # Email configuration (using Ethereal for testing)
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+SMTP_PORT=465
 SMTP_USER=ar.shafi.as@gmail.com
 SMTP_PASS=ybwgtlmerqsqxrbx
-SMTP_SECURITY=false
+SMTP_SECURITY=true
