--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 # Email configuration (using Ethereal for testing)
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+SMTP_PORT=465
 SMTP_USER=ar.shafi.as@gmail.com
 SMTP_PASS=ybwgtlmerqsqxrbx
-SMTP_SECURITY=false
+SMTP_SECURITY=true
