--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@xyflow/react": "^12.10.0",
+    "clsx": "^1.2.1",
     "next": "16.1.5",
     "react": "19.2.3",
     "react-dom": "19.2.3"
